src/objects/Case_Occurrence__c.object
<CustomObject>
    <description>The report will show the total no. of complaint cases that were lodged and a further breakdown of how many are valid and void.</description>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Occurrence</label>
    <nameField>
        <label>Case Occurrence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Occurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>